# demo_engine

./: Cargo.toml  README.md  build.rs
assets/: test_scene.json
src/: main.rs  scene.rs  shader.rs
