[package]

name = "demo_engine"
version = "0.0.1"
authors = ["per_k2"]

#will use the generator and build gles bindings.
build = "build.rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

#creates opengl/gles bindings
[build-dependencies.gl_generator]
git = "https://github.com/bjz/gl-rs.git"

[build-dependencies.khronos_api]
git = "https://github.com/bjz/gl-rs.git"

[dependencies.gl_common]
git = "https://github.com/bjz/gl-rs.git"

[[bin]]

name = "demo_engine"
